Fix app slow. App eat too much RAM, make big thread pool. Now use small fixed pool, remove semaphor. App happy. Fix test break. Wait for thread finish before clear DB. Test pass. Fix device offline. Device block ping but talk on LAN? Still online. Check passive time. Device stay online.